--- a/app/views/layouts/_subnav.html.erb
+++ b/app/views/layouts/_subnav.html.erb
@@ -7,6 +7,32 @@
     </div>
   </nav>
 
+  <div><!-- TODO -->
+    <div class="dropdown me-1">
+      <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <span class="material-icons" aria-hidden="true">history</span> Query History
+      </button>
+
+      <div class="dropdown-menu p-3" style="min-width: 575px; max-height: 575px; overflow: scroll;">
+        <% foo = CompositionResultMetadataLog.where(user_id: current_user.user_id).order(created_at: :desc).limit(100) %>
+        <ul style="list-style: none;" class="p-0 m-0">
+          <% foo.each do |query| %>
+            <li>
+              <% scary_params = eval(query.params) %>
+              <a href="/data-explorer?<%= scary_params.to_query %>">
+                <%= time_ago_in_words query.created_at %> —
+                <%= scary_params["lens"] %>:
+                [<%= RangeDescription.in_words(scary_params["from"].tr(" ", "+"), scary_params["to"].tr(" ", "+")) %>]
+                <%= scary_params["granularity"] || "" %>
+                <%= scary_params["group.1"] || "" %>
+                <%= scary_params["group.2"] || "" %>
+                </a>
+            </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+  </div>
   <div class="navbar-text p-2">
     Last 48 hours: <%= number_to_human_size(@bytes) %> (<%= number_to_currency(@bytes.to_f / 2.0**40 * BIGQUERY_PRICE_PER_TIB, precision: 5) %>)
   </div>
