Fix code style and lint issues

--- a/app/views/data_explorer/dimensional/_group_chooser.html.erb
+++ b/app/views/data_explorer/dimensional/_group_chooser.html.erb
@@ -70,7 +70,7 @@
         <% if indices && indices.size > 1 %>
           <% i = 0 %>
           <% while i < indices.size - 1 do %>
-            <li>Greater Than Or Equal To: <input disabled <%= html_attributes(value: indices[i]) %>> and less than <input data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: indices[i+1]) %>> <a href="#" data-action="data-explorer--group-chooser#removeRange">X</a></li>
+            <li>Greater Than Or Equal To: <input disabled <%= html_attributes(value: indices[i]) %>> and less than <input data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: indices[i + 1]) %>> <a href="#" data-action="data-explorer--group-chooser#removeRange">X</a></li>
             <% i += 1 %>
           <% end %>
         <% end %>
@@ -93,7 +93,7 @@
         <% if indices && indices.size > 1 %>
           <% i = 0 %>
           <% while i < indices.size - 1 do %>
-            <li>Greater Than Or Equal To: <input disabled <%= html_attributes(value: to_duration_shorthand(indices[i])) %>> and less than <input data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: to_duration_shorthand(indices[i+1])) %>> <a href="#" data-action="data-explorer--group-chooser#removeRange">X</a></li>
+            <li>Greater Than Or Equal To: <input disabled <%= html_attributes(value: to_duration_shorthand(indices[i])) %>> and less than <input data-action="data-explorer--group-chooser#changeRangeIndex" <%= html_attributes(value: to_duration_shorthand(indices[i + 1])) %>> <a href="#" data-action="data-explorer--group-chooser#removeRange">X</a></li>
             <% i += 1 %>
           <% end %>
         <% end %>
@@ -118,7 +118,7 @@
                 type="checkbox"
                 value="<%= dim_key %>"
                 id="<%= x %>"
-                <%= html_attributes(checked: "checked") if group && group.meta&.include?(dimension_name.to_sym) %>
+                <%= html_attributes(checked: "checked") if group&.meta&.include?(dimension_name.to_sym) %>
                 <%= html_attributes(name: "group.#{group_num}.meta") %>>
               <%= prop_or_dim_label(dimension_name) %> (raw)
             </label>
@@ -126,7 +126,7 @@
 
           <%# List all the static fields for this dimension, but exclude the exhibit field, since it %>
           <%# will already be displayed. %>
-          <% dimension_def["StaticFields"]&.filter {|p| p != dimension_def["ExhibitField"] }&.each do |static_field_name| %>
+          <% dimension_def["StaticFields"]&.filter { |p| p != dimension_def["ExhibitField"] }&.each do |static_field_name| %>
             <% static_field_def = DataSchemaUtil.field_definition(static_field_name) %>
             <% static_field_key = static_field_def["QueryKey"] || static_field_name %>
             <% x = "meta-#{static_field_name}-#{dimension_name}" %>
@@ -135,7 +135,7 @@
                 type="checkbox"
                 value="<%= static_field_key %>"
                 id="<%= x %>"
-                <%= html_attributes(checked: "checked") if group && group.meta&.include?(static_field_name.to_sym) %>
+                <%= html_attributes(checked: "checked") if group&.meta&.include?(static_field_name.to_sym) %>
                 <%= html_attributes(name: "group.#{group_num}.meta") %>>
               <%= prop_or_dim_label(static_field_name) %>
             </label>
