--- a/app/assets/stylesheets/data-explorer/time-range-chooser.css
+++ b/app/assets/stylesheets/data-explorer/time-range-chooser.css
@@ -1,8 +1,12 @@
 #time-ranger-chooser {
-  ul, p {
+  ul,
+  p {
     display: none;
   }
-  &:hover ul, &:hover p { display: block; }
+  &:hover ul,
+  &:hover p {
+    display: block;
+  }
 
   .field_with_errors {
     display: inline;
